--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "scripts": {
+    "start": "vite --host",
+    "build": "vite build"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.7"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.9"
+  },
+  "dependencies": {
+    "vite": "^5.4.0"
   }
 }
